# subway-pcb

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  CMakeLists.txt  Makefile  README.md  plan.md  platformio.ini  railway.json  sdkconfig.defaults  sdkconfig.esp32dev
.github/workflows/: ci.yml  deploy.yml  e2e.yml  firmware.yml  lint.yml  pages.yml  release-firmware.yml  test.yml
.trunk/: trunk.yaml
docs/: docs.json  introduction.mdx
firmware/: .clang-format  .gitignore  CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults
firmware/components/lua54/: .gitignore  CMakeLists.txt  README.md
firmware/proto/: subway.options  subway.pb.c  subway.pb.h
firmware/scripts/: gen_embed_files.py  gen_station_map.py
firmware/src/: CMakeLists.txt  board_config.c  board_config.h  config.h  device_log.c  device_log.h  http_client.c  http_client.h  led_driver.c  led_driver.h  lua_runtime.c  lua_runtime.h  main.c  main.cpp  render_context.c  render_context.h  renderer.c  renderer.h  state_client.c  state_client.h  station_map.c  station_map.h  subway_client.c  subway_client.h
firmware/src/config/: board_config.cpp  board_config.hpp  constants.hpp
firmware/src/core/: channel.hpp  lua_includes.hpp  triple_buffer.hpp  types.hpp
firmware/src/data/: board_snapshot.cpp  board_snapshot.hpp  diag_pad.hpp  transit_snapshot.hpp
firmware/src/hal/: led_driver.cpp  led_driver.hpp
firmware/src/log/: device_log.cpp  device_log.hpp
firmware/src/net/: http_client.cpp  http_client.hpp  state_client.cpp  state_client.hpp
firmware/src/proto/: codec.cpp  codec.hpp
firmware/src/script/: lua_bindings.cpp  lua_bindings.hpp  lua_runtime.cpp  lua_runtime.hpp
firmware/src/serial/: serial_handler.cpp  serial_handler.hpp
firmware/test/: Makefile  serial_spec  stubs.c  stubs.cpp  test_e2e.cpp  test_fixtures.hpp  test_lua_conformance.c  test_lua_conformance.cpp  test_serial_commands.cpp  test_stress.cpp  test_utils.hpp
mapper/bridge/: bridge.ino
mcp/: capture.py
pcb/: ReadMe.txt
pcb/bom/: bom.xlsx  design.csv  ibom.html
proto/: serial-commands.json  subway.options  subway.proto
server/: .air.toml  Dockerfile  go.mod  go.sum  visualizer.html
service/: .air.toml  Dockerfile  biome.json  go.mod  go.sum  led_map.json  leds.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
src/: main.c
tools/: serial_log.py  ty.toml
(+397 files in other folders)
